--- a/plutopay.html
+++ b/plutopay.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Michelle Le">
-    <meta name="description" content="PlutoPay project">
+    <meta name="description" content="PlutoPay Case Study">
     <link rel="shortcut icon" href="img/icons/favicon.ico">
     <title>PlutoPay Case Study</title>
 </head>
@@ -28,7 +28,47 @@
 
 <!--Body-->
     <main> 
-       
+       <div> <!--PlutoPay page-->
+            <div><!--total container-->
+                <div> <!--hero section-->
+                    <h1>PlutoPay Case Study</h1>
+                    <picture>
+                        <source>
+                        <img src="" alt="">
+                    </picture>
+
+                    <!--button to view prototype-->
+                    <a href=""></a>
+                    <h3>Main focus:</h3>
+                    <p>Create an application from scratch. Grow user experience skills.</p>
+
+                    <h3>Skills utilized:</h3>
+                    <p>Figma, user personas, user journey, information architecture, usability testing, and prototyping</p>
+                </div>
+
+                <div> <!--Project Journey-->
+                    <h2>Introduction</h2>
+                    <h3>Problem:</h3>
+                    <p>With the boom of the ecommerce market, the problem to make purchases securely and efficiently was brought forward.
+                        How can users track all of their finances and make money transfer safely in one tool?
+                    </p>
+
+                    <h3>Solution:</h3>
+                    <p>Create a responsive web app that potential users can use to transfer money, create goals and budgets, and track all of their 
+                        money without the need to visit a physical bank or store. 
+                    </p>
+                    <p>This project was reviewed with CareerFoundry's UX Program.</p>
+
+                    <h3>My Role:</h3>
+                    <p>UX Designer</p>
+
+                    <h3>Time Duration</h3>
+                    <p>1.16 years</p>
+
+                </div>
+
+            </div>
+       </div>
     </main>
 
 <!--Footer-->
