--- a/plutopay.html
+++ b/plutopay.html
@@ -65,6 +65,24 @@
                     <h3>Time Duration</h3>
                     <p>1.16 years</p>
 
+                    <h2>My Process</h2>
+                    <ol>
+                        <li>The Initial Goal 
+                            <ul>Double Diamond Strategy</ul>
+                        </li>
+                        <li>Research, Testing, and Results
+                            <ul>Competitive Analysis, Business Requirements, Interviews</ul>
+                        </li>
+                        <li>User Stories
+                            <ul>User Flows, Site Mapping</ul>
+                        </li>
+                        <li>Wireframing and Prototyping
+                            <ul>Low and Mid Fidelity Prototypes, Card Sorting, Usability Testing, Preference Testing</ul>
+                        </li>
+                        <li>The Iterative Process</li>
+                        <li>Final Mockup</li>
+                    </ol>
+
                 </div>
 
             </div>
