--- a/plutopay.html
+++ b/plutopay.html
@@ -29,6 +29,7 @@
 <!--Body-->
     <main> 
        <div> <!--PlutoPay page-->
+        <!--Add Table of Contents on left side of page???-->
             <div><!--total container-->
                 <div> <!--hero section-->
                     <h1>PlutoPay Case Study</h1>
@@ -47,46 +48,64 @@
                 </div>
 
                 <div> <!--Project Journey-->
-                    <h2>Introduction</h2>
-                    <h3>Problem:</h3>
-                    <p>With the boom of the ecommerce market, the problem to make purchases securely and efficiently was brought forward.
-                        How can users track all of their finances and make money transfer safely in one tool?
-                    </p>
+                    <div> <!--Introduction Section-->
+                        <h2>Introduction</h2>
+                        <h3>Problem:</h3>
+                        <p>With the boom of the ecommerce market, the problem to make purchases securely and efficiently was brought forward.
+                            How can users track all of their finances and make money transfer safely in one tool?
+                        </p>
 
-                    <h3>Solution:</h3>
-                    <p>Create a responsive web app that potential users can use to transfer money, create goals and budgets, and track all of their 
-                        money without the need to visit a physical bank or store. 
-                    </p>
-                    <p>This project was reviewed with CareerFoundry's UX Program.</p>
 
-                    <h3>My Role:</h3>
-                    <p>UX Designer</p>
+                        <h3>Solution:</h3>
+                        <p>Create a responsive web app that potential users can use to transfer money, create goals and budgets, and track all of their 
+                            money without the need to visit a physical bank or store. 
+                        </p>
+                        <p>This project was reviewed with CareerFoundry's UX Program.</p>
 
-                    <h3>Time Duration</h3>
-                    <p>1.16 years</p>
+                        <h3>My Role:</h3>
+                        <p>UX Designer</p>
 
-                    <h2>My Process</h2>
-                    <ol>
-                        <li>The Initial Goal 
-                            <ul>Double Diamond Strategy</ul>
-                        </li>
-                        <li>Research, Testing, and Results
-                            <ul>Competitive Analysis, Business Requirements, Interviews</ul>
-                        </li>
-                        <li>User Stories
-                            <ul>User Flows, Site Mapping</ul>
-                        </li>
-                        <li>Wireframing and Prototyping
-                            <ul>Low and Mid Fidelity Prototypes, Card Sorting, Usability Testing, Preference Testing</ul>
-                        </li>
-                        <li>The Iterative Process</li>
-                        <li>Final Mockup</li>
-                    </ol>
+                        <h3>Time Duration</h3>
+                        <p>1.16 years</p>
+                    </div>
 
-                </div>
+                    <div><!--Process Section-->
+                        <h2>My Process</h2>
+                        <ol>
+                            <li>The Initial Goal 
+                                <ul>Double Diamond Strategy</ul>
+                            </li>
+                            <li>Research, Testing, and Results
+                                <ul>Competitive Analysis, Business Requirements, Interviews</ul>
+                            </li>
+                            <li>User Stories
+                                <ul>User Flows, Site Mapping</ul>
+                            </li>
+                            <li>Wireframing and Prototyping
+                                <ul>Low and Mid Fidelity Prototypes, Card Sorting, Usability Testing, Preference Testing</ul>
+                            </li>
+                            <li>The Iterative Process</li>
+                            <li>Final Mockup</li>
+                        </ol>
+                    </div>
 
-            </div>
-       </div>
+                    <div><!--Overview Section-->
+                        <h2>Overview</h2>
+                        <p>The pandemic, combined with growing technology usage, has greatly increased the popularity of ecommerce. The challenge to make 
+                            purchases securely and efficiently was brought forward. Pluto Pay's goal in mind is to allow anyone to have control of their 
+                            money no matter the circumstance.
+                        </p>
+
+                        <picture> <!--Double Diamond image-->
+                            <source>
+                            <img src="" alt="">
+                        </picture>
+
+                    </div>
+
+                </div> <!--End of Project Journey-->
+            </div><!--End of total container-->
+       </div><!--End of content page-->
     </main>
 
 <!--Footer-->
