--- a/plutopay.html
+++ b/plutopay.html
@@ -101,7 +101,52 @@
                             <img src="" alt="">
                         </picture>
 
-                    </div>
+                        <p>To understand the problem users will face, I implemented the double diamond strategy to work towards a feasible solution. 
+                            By listing all the problems that users currently have, I was able to have a bird's eye view of a working hypothesis and 
+                            our end goal.
+                        </p>
+
+                        <p>Inital Hypothesis:</p>
+                        <p> From the increase of online shopping, and less physical cash transactions, individuals need a way to bank securely and 
+                            effortlessly make online financial transactions while avoiding the dangers of fraud. 
+                        </p>
+                        <p>We will know this to be true when we see how many users send, save, and move money.</p>
+
+                        <p>To test this hypothesis, I interviewed five compatible potential users and conducted a competitor analysis on several brands.
+                            Modeled off of results, I made two user personas, who were the forefront of my design decisions. 
+                        </p>
+
+                        <picture> <!--Insert one user persona example-->
+                            <source>
+                            <img src="" alt="">
+                        </picture>
+
+                        <div> <!--Design process section-->
+                            <h3>Design Iterative Process</h3>
+                        
+                            <div> <!--Insert example of low fidelity design to be put next to high fid design img--> 
+                                <picture> 
+                                    <source>
+                                    <img src="" alt="">
+                                </picture>
+                            </div>
+                            <div> <!--Insert example of high fidelity design-->
+                                <picture> 
+                                    <source>
+                                    <img src="" alt="">
+                                </picture>
+                            </div>
+    
+                            <p>The first design was based of off competitive and user research. Through prototyping, usability testing, and overall learning 
+                                more design skills as my project developed, my design changed iteratively about seven times! One of these major design changes 
+                                was to adjust my design to adhere to the Web Content Accessibility Guidelines (WCAG) and Material Design guidelines. 
+                                The most constructive critiques I received were from usability testing and peer review. In the usability testing, I interviewed six 
+                                potential consumers, developed the Rainbow Spreadsheet, and changed the app cooresponding to the severity of issues.
+                            </p>
+                        </div>
+
+
+                    </div><!--End of Overview-->
 
                 </div> <!--End of Project Journey-->
             </div><!--End of total container-->
