--- a/plutopay.html
+++ b/plutopay.html
@@ -143,6 +143,32 @@
                                 The most constructive critiques I received were from usability testing and peer review. In the usability testing, I interviewed six 
                                 potential consumers, developed the Rainbow Spreadsheet, and changed the app cooresponding to the severity of issues.
                             </p>
+
+                            <picture> <!--Insert Rainbow Spreadsheet snippet img-->
+                                <source>
+                                <img src="" alt="">
+                            </picture>
+
+                            <p> 
+                                As Pluto Pay continues to develop and grow, consumer feedback is sure to follow; to stay on top of it, my updated hypothesis is: 
+                            </p>
+
+                            <p>
+                                As individuals continue to bank securely, they need to track and manage their finances, online and in-person, seamlessly wherever they go. An up-to-date Pluto Pay app and reformed Card feature will allow individuals to precisely track their shopping habits. Continuing our original goal for Pluto Pay to become an one stop financial tool, I believe the solutions we provide: budgeting, goal setting, and sending money to friends, will help the individual feel more confident.
+                                We will know this to be true when we track user retention rate and growth rate.
+                            </p>
+
+                            <p> This whole process taught me a lot about the balance of developing a design with the users' perspective and the business' needs. 
+                                I've learned how important it is to learn and grow from the feedback given to you. 
+                            </p>
+
+                        </div> <!--End of Design Process section-->
+
+                        <div> <!--Challenges and Takeaway section-->
+                            <h3>Challenges</h3>
+
+                            <h3>Main Takeaway</h3>
+
                         </div>
 
 
