--- a/plutopay.html
+++ b/plutopay.html
@@ -166,9 +166,22 @@
 
                         <div> <!--Challenges and Takeaway section-->
                             <h3>Challenges</h3>
+                            <p>This was a fun project to tackle. As a person who uses multiple financial apps myself, I found it hard to not put my own personal 
+                                opinions on how the design should look. I was quickly humbled when I interviewed others and was also reminded of why user-centric 
+                                designs work best. My biggest struggle was translating my designs from pen and paper into a working prototype. With time, and lots 
+                                of trial and error, I am now confident in using Figma to create thoughtful designs. 
+                            </p>
 
                             <h3>Main Takeaway</h3>
+                            <p>With the birth of Pluto Pay, I learned how to focus on the user and translate their thoughts into a responsive financial web app. By conducting user interviews, prototyping, and usability testing, I was able to create a functional design with Figma.
+                                If you have any questions, or would like to talk about design (Pluto Pay or otherwise), I would love to hear from you!
+                                Furthermore, please feel to test the prototype!
+                            </p>
 
+                            <!--Button to PlutoPay-->
+                            <a href="#">View PlutoPay</a>
+
+                            <!--PlutoPay Gallery at end maybe??-->
                         </div>
 
 
