--- a/plutopay.html
+++ b/plutopay.html
@@ -34,12 +34,12 @@
                 <div> <!--hero section-->
                     <h1>PlutoPay Case Study</h1>
                     <picture>
-                        <source>
-                        <img src="" alt="">
+                        <source srcset="img/plutopay/all_imgs/plutopaymockup_one.jpg" media="(max-width:767px)">
+                        <img src="img/plutopay/all_imgs/plutopaymockup_two.jpg" alt="Plutopay mockup">
                     </picture>
 
                     <!--button to view prototype-->
-                    <a href=""></a>
+                    <a href="#">View PlutoPay Prototype</a>
                     <h3>Main focus:</h3>
                     <p>Create an application from scratch. Grow user experience skills.</p>
 
@@ -55,7 +55,6 @@
                             How can users track all of their finances and make money transfer safely in one tool?
                         </p>
 
-
                         <h3>Solution:</h3>
                         <p>Create a responsive web app that potential users can use to transfer money, create goals and budgets, and track all of their 
                             money without the need to visit a physical bank or store. 
@@ -65,7 +64,7 @@
                         <h3>My Role:</h3>
                         <p>UX Designer</p>
 
-                        <h3>Time Duration</h3>
+                        <h3>Time Duration:</h3>
                         <p>1.16 years</p>
                     </div>
 
@@ -97,8 +96,8 @@
                         </p>
 
                         <picture> <!--Double Diamond image-->
-                            <source>
-                            <img src="" alt="">
+                            <source srcset="img/plutopay/all_imgs/a1e6_doublediamondstrategy_one.jpg" media="(max-width:767px)">
+                            <img src="img/plutopay/all_imgs/a1e6_doublediamondstrategy_two.jpg" alt="Double Diamond Strategy process">
                         </picture>
 
                         <p>To understand the problem users will face, I implemented the double diamond strategy to work towards a feasible solution. 
@@ -117,8 +116,8 @@
                         </p>
 
                         <picture> <!--Insert one user persona example-->
-                            <source>
-                            <img src="" alt="">
+                            <source srcset="img/plutopay/all_img/serenauserpersona_one.jpg" media="(max-width:767px)">
+                            <img src="img/plutopay/all_imgs/serenauserpersona_two.jpg" alt="User persona Serena">
                         </picture>
 
                         <div> <!--Design process section-->
