Add link to plutopay project
-change plutopay button to be more descriptive
- added link to project

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <p>A responsive web app that potential users can use to transfer money, create goals and budgets, 
                             and track all of their money without the need to visit a physical bank or store. </p>
                         <!--Button/Link for Project-->
-                        <a href="#">Read More</a>
+                        <a href="plutopay.html">View Case Study</a>
                     </div>
 
                 </div> <!--End of PlutoPay Project-->
