--- a/vocabularyapp.html
+++ b/vocabularyapp.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Michelle Le">
-    <meta name="description" content="PlutoPay Case Study">
+    <meta name="description" content="Vocabulary App Case Study">
     <link rel="shortcut icon" href="img/icons/favicon.ico">
-    <title>PlutoPay Case Study</title>
+    <title>Vocabulary App Case Study</title>
 </head>
 
 <body>
