--- a/vocabularyapp.html
+++ b/vocabularyapp.html
@@ -106,11 +106,68 @@
                         </picture>
 
                         <h3>Design</h3>
+                        <p>With enough research materials, I created some user flows to conceptualized the app's pages. Then, created cooresponding low-fidelity wireframes 
+                            to bring the app to life.
+                        </p>
 
-                    </div>
+                        <div> <!--Have two pictures side by side. Column one-->
+                            <picture> <!--User flow example-->
+                                <source srcset="img/vocabularyapp/all_imgs/userflow1_one.jpg" media="(max-width:767px)">
+                                <img src="img/vocabularyapp/all_imgs/userflow1_two.jpg" alt="User flow example">
+                            </picture>
+                        </div>
 
-                </div>
+                        <div>
+                            <picture> <!--low fidelity wireframe example-->
+                                <source srcset="img/vocabularyapp/all_imgs/lowfid_userflow1_one.jpg" media="(max-width:767px)">
+                                <img src="img/vocabularyapp/all_imgs/lowfid_userflow1_two.jpg" alt="low-fidelity wireframes">
+                            </picture>
+                        </div>
 
+                        <p>Finally, it was time to test the app! I conducted five usability test through the application, Marvel. With their feedback, 
+                            I revised the app to their concerns. 
+                        </p>
+
+                        <picture> <!--Usability test feedback snippet-->
+                            <source srcset="img/vocabularyapp/all_imgs/usabilitytestreportexample_one.jpg" media="(max-width:767px)">
+                            <img src="img/vocabularyapp/all_imgs/usabilitytestreportexample_two.jpg" alt="Usability test feedback snippet">
+                        </picture>
+
+                        <div> <!--Have two pictures side by side. Column one-->
+                            <picture> <!--Before-->
+                                <source srcset="img/vocabularyapp/all_imgs/homepagebefore_one.jpg" media="(max-width:767px)">
+                                <img src="img/vocabularyapp/all_imgs/homepagebefore_two.jpg" alt="Homepage Before">
+                            </picture>
+                        </div>
+
+                        <div>
+                            <picture> <!--After-->
+                                <source srcset="img/vocabularyapp/all_imgs/homepageafter_one.jpg" media="(max-width:767px)">
+                                <img src="img/vocabularyapp/all_imgs/homepageafter_two.jpg" alt="Homepage after">
+                            </picture>
+                        </div>
+
+                    </div><!--End of Overview-->
+
+                    <div><!--Conclusion-->
+                        <div><!--Challenges-->
+                            <h2>Challenges</h2>
+                            <p>Surprisingly, learning to be user-centric throughout the project was not the hardest part even though that was the main focus of this project. 
+                                The biggest challenge I faced was conducting the usability testing. Especially, trying to balance telling information without changing 
+                                the participants' way of thinking and doing. 
+                            </p>
+                        </div>
+
+                        <div>
+                            <h2>Main Takeaway</h2>
+                            <p> learned from the designs that I need to be more neat and concise. There were times the participant and the app were on the same page 
+                                but because I did not concisely write it that way, the participant was confused. I also learned the user centric ideology save times 
+                                in the app creation process. By creating for the user, features are made for them in a way they will understand. 
+                            </p>
+                        </div>
+                        
+                    </div><!--End of Conclusion-->
+                </div><!--End of Vocabulary Journey-->
             </div><!--End of total container-->
        </div><!--End of content page-->
     </main>
