--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             This project was the start of my UX journey.
                         </p>
 
-                        <a href="#">Read More</a>
+                        <a href="vocabularyapp.html">Read More</a>
                     </div>
 
                 </div> <!--End of Vocab Project-->
