--- a/plutopay.html
+++ b/plutopay.html
@@ -39,7 +39,7 @@
                     </picture>
 
                     <!--button to view prototype-->
-                    <a href="https://www.figma.com/file/UTSGuIsi6WGPvDhYzCYnUn/PlutoPay?type=design&node-id=20%3A35&mode=design&t=xYiiR7G1vWsVQ47b-1">View PlutoPay Prototype</a>
+                    <a href="https://www.figma.com/file/UTSGuIsi6WGPvDhYzCYnUn/PlutoPay?type=design&node-id=20%3A35&mode=design&t=xYiiR7G1vWsVQ47b-1" target="_blank">View PlutoPay Prototype</a>
                     
                     <h3>Main focus:</h3>
                     <p>Create an application from scratch. Grow user experience skills.</p>
@@ -179,7 +179,7 @@
                             </p>
 
                             <!--Button to PlutoPay-->
-                            <a href="https://www.figma.com/file/UTSGuIsi6WGPvDhYzCYnUn/PlutoPay?type=design&node-id=20%3A35&mode=design&t=xYiiR7G1vWsVQ47b-1">View PlutoPay</a>
+                            <a href="https://www.figma.com/file/UTSGuIsi6WGPvDhYzCYnUn/PlutoPay?type=design&node-id=20%3A35&mode=design&t=xYiiR7G1vWsVQ47b-1" target="_blank">View PlutoPay</a>
 
                             <!--PlutoPay Gallery at end maybe??-->
                         </div>
