--- a/plutopay.html
+++ b/plutopay.html
@@ -72,17 +72,28 @@
                     <div><!--Process Section-->
                         <h2>My Process</h2>
                         <ol>
-                            <li>The Initial Goal 
-                                <ul>Double Diamond Strategy</ul>
+                            <li>The Initial Goal
+                                <ul>
+                                    <li>Double Diamond Strategy</li>
+                                </ul>
                             </li>
+
                             <li>Research, Testing, and Results
-                                <ul>Competitive Analysis, Business Requirements, Interviews</ul>
+                                <ul>
+                                    <li>Competitive Analysis, Business Requirements, Interviews</li>
+                                </ul>
                             </li>
+
                             <li>User Stories
-                                <ul>User Flows, Site Mapping</ul>
+                                <ul>
+                                    <li>User Flows, Site Mapping</li>
+                                </ul>
                             </li>
+
                             <li>Wireframing and Prototyping
-                                <ul>Low and Mid Fidelity Prototypes, Card Sorting, Usability Testing, Preference Testing</ul>
+                                <ul>
+                                    <li>Low and Mid Fidelity Prototypes, Card Sorting, Usability Testing, Preference Testing</li>
+                                </ul>
                             </li>
                             <li>The Iterative Process</li>
                             <li>Final Mockup</li>
