--- a/vocabularyapp.html
+++ b/vocabularyapp.html
@@ -65,19 +65,29 @@
                         <h2>My Process</h2>
                         <ol>
                             <li>User Research
-                                <ul>Competitive Analysis, User Interviews</ul>
+                                <ul>
+                                    <li>Competitive Analysis, User Interviews</li>
+                                </ul>
                             </li>
                             <li>User Personas
-                                <ul>Proto-Persona Creation, User Stories, Problem Statement, Hypothesis</ul>
+                                <ul>
+                                    <li>Proto-Persona Creation, User Stories, Problem Statement, Hypothesis</li>
+                                </ul>
                             </li>
                             <li>Information Architecture
-                                <ul>Task Analysis, User Flows, Site-mapping</ul>
+                                <ul>
+                                    <li>Task Analysis, User Flows, Site-mapping</li>
+                                </ul>
                             </li>
                             <li>Wireframing &amp; Prototyping
-                                <ul>low fidelity wireframing and prototyping desings</ul>
+                                <ul>
+                                    <li>Low Fidelity Wireframing and Prototyping Designs</li>
+                                </ul>
                             </li>
                             <li>Usability Testing
-                                <ul>Conduct Testing, Summarize Findings, Feedback Loop</ul>
+                                <ul>
+                                    <li>Conduct Testing, Summarize Findings, Feedback Loop</li>
+                                </ul>
                             </li>
                         </ol>
                     </div>
@@ -165,7 +175,7 @@
                                 in the app creation process. By creating for the user, features are made for them in a way they will understand. 
                             </p>
                         </div>
-                        
+
                     </div><!--End of Conclusion-->
                 </div><!--End of Vocabulary Journey-->
             </div><!--End of total container-->
