--- a/about.html
+++ b/about.html
@@ -5,6 +5,11 @@
     <meta name="author" content="Michelle Le">
     <meta name="description" content="Michelle Le Story">
     <link rel="shortcut icon" href="img/icons/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;700&display=swap" rel="stylesheet">
     <title>About Michelle Le</title>
 </head>
 
