--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Michelle Le">
     <meta name="description" content="This is the homepage of my website.">
     <link rel="shortcut icon" href="img/icons/favicon.ico">
