--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
                             In my free time, you can find me cozied up at home reading a good book, or hiking the nearest mountain (the easy route of course). 
                             I'm currently available for full-time hire, located in Manhattan, KS but open to relocating. 
                         </p>
-                        <a href="files/MichelleLe_Resume.pdf" target="_blank">View my Resume</a>
+                        <a href="files/MichelleLe_Resume.pdf" target="_blank" button="secondary-button">View my Resume</a>
                     </div>
 
                     <div><!--second column/row-->
@@ -85,23 +85,23 @@
     </main>
 
 <!--Footer-->
-    <footer>
+    <footer id="contact">
         <!--container-->
         <div>
             <h2>Contact Me</h2>
             <p>If you would like to discuss more, share feedback, or ask any questions, please contact me.</p>
             
-            <p> Call me at <a href="tel:316-214-0954">316-214-0954</a></p>
-            
-            <p>Email me</p>
-            <div>
-                <a href="mailto:michtn.le@gmail.com">michtn.le@gmail.com</a>
-            </div>
+            <p> Call me at <a href="tel:316-214-0954">316-214-0954</a> or email me at 
+                <a href="mailto:michtn.le@gmail.com" >michtn.le@gmail.com</a>
+            </p>
 
             <!--Social Media-->
             <div>
                 <a href="https://www.linkedin.com/in/michelletnle/" target="_blank">
-                    <img src="img/icons/icons8-linkedin.svg" alt="LinkedIn logo">
+                    <img src="img/icons/icons8-linkedin.svg" alt="LinkedIn logo"
+                    style="object-fit: contain;
+                    width:24px;
+                    height:24px;">
                 </a>
             </div>
 
