--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <p>A responsive web app that potential users can use to transfer money, create goals and budgets, 
                             and track all of their money without the need to visit a physical bank or store. </p>
                         <!--Button/Link for Project-->
-                        <a href="plutopay.html">View Case Study</a>
+                        <a href="plutopay.html" class="primary-button">View Case Study</a>
                     </div>
 
                 </div> <!--End of PlutoPay Project-->
@@ -92,7 +92,7 @@
                             This project was the start of my UX journey.
                         </p>
 
-                        <a href="vocabularyapp.html">Read More</a>
+                        <a href="vocabularyapp.html" class="primary-button">View Case Study</a>
                     </div>
 
                 </div> <!--End of Vocab Project-->
@@ -109,17 +109,17 @@
             <h2>Contact Me</h2>
             <p>If you would like to discuss more, share feedback, or ask any questions, please contact me.</p>
             
-            <p> Call me at <a href="tel:316-214-0954">316-214-0954</a></p>
-            
-            <p>Email me</p>
-            <div>
-                <a href="mailto:michtn.le@gmail.com">michtn.le@gmail.com</a>
-            </div>
+            <p> Call me at <a href="tel:316-214-0954">316-214-0954</a> or email me at 
+                <a href="mailto:michtn.le@gmail.com" >michtn.le@gmail.com</a>
+            </p>
 
             <!--Social Media-->
             <div>
                 <a href="https://www.linkedin.com/in/michelletnle/" target="_blank">
-                    <img src="img/icons/icons8-linkedin.svg" alt="LinkedIn logo">
+                    <img src="img/icons/icons8-linkedin.svg" alt="LinkedIn logo"
+                    style="object-fit: contain;
+                    width:24px;
+                    height:24px;">
                 </a>
             </div>
 
