--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </main>
 
 <!--Footer-->
-    <footer id="contact">
+    <footer id="contact-">
         <!--container-->
         <div>
             <h2>Contact Me</h2>
