--- a/plutopay.html
+++ b/plutopay.html
@@ -210,23 +210,23 @@
     </main>
 
 <!--Footer-->
-    <footer>
+    <footer id="contact">
         <!--container-->
         <div>
             <h2>Contact Me</h2>
             <p>If you would like to discuss more, share feedback, or ask any questions, please contact me.</p>
             
-            <p> Call me at <a href="tel:316-214-0954">316-214-0954</a></p>
-            
-            <p>Email me</p>
-            <div>
-                <a href="mailto:michtn.le@gmail.com">michtn.le@gmail.com</a>
-            </div>
+            <p> Call me at <a href="tel:316-214-0954">316-214-0954</a> or email me at 
+                <a href="mailto:michtn.le@gmail.com" >michtn.le@gmail.com</a>
+            </p>
 
             <!--Social Media-->
             <div>
                 <a href="https://www.linkedin.com/in/michelletnle/" target="_blank">
-                    <img src="img/icons/icons8-linkedin.svg" alt="LinkedIn logo">
+                    <img src="img/icons/icons8-linkedin.svg" alt="LinkedIn logo"
+                    style="object-fit: contain;
+                    width:24px;
+                    height:24px;">
                 </a>
             </div>
 
