--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
                             In my free time, you can find me cozied up at home reading a good book, or hiking the nearest mountain (the easy route of course). 
                             I'm currently available for full-time hire, located in Manhattan, KS but open to relocating. 
                         </p>
-                        <a href="files/MichelleLe_Resume.pdf" target="_blank" button="secondary-button">View my Resume</a>
+                        <a class="primary-button" href="files/MichelleLe_Resume.pdf" target="_blank">View my Resume</a>
                     </div>
 
                     <div><!--second column/row-->
