--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <p>A responsive web app that potential users can use to transfer money, create goals and budgets, 
                             and track all of their money without the need to visit a physical bank or store. </p>
                         <!--Button/Link for Project-->
-                        <a href="plutopay.html" class="primary-button">View Case Study</a>
+                        <a class="primary-button" href="plutopay.html">View Case Study</a>
                     </div>
 
                 </div> <!--End of PlutoPay Project-->
@@ -92,7 +92,7 @@
                             This project was the start of my UX journey.
                         </p>
 
-                        <a href="vocabularyapp.html" class="primary-button">View Case Study</a>
+                        <a class="primary-button" href="vocabularyapp.html">View Case Study</a>
                     </div>
 
                 </div> <!--End of Vocab Project-->
