--- a/plutopay.html
+++ b/plutopay.html
@@ -196,7 +196,10 @@
                             </p>
 
                             <!--Button to PlutoPay-->
-                            <a href="https://www.figma.com/file/UTSGuIsi6WGPvDhYzCYnUn/PlutoPay?type=design&node-id=20%3A35&mode=design&t=xYiiR7G1vWsVQ47b-1" target="_blank">View PlutoPay</a>
+                            <a class="primary-button" 
+                                href="https://www.figma.com/file/UTSGuIsi6WGPvDhYzCYnUn/PlutoPay?type=design&node-id=20%3A35&mode=design&t=xYiiR7G1vWsVQ47b-1" target="_blank">
+                                View PlutoPay
+                            </a>
 
                             <!--PlutoPay Gallery at end maybe??-->
                         </div>
