--- a/plutopay.html
+++ b/plutopay.html
@@ -37,7 +37,7 @@
        <div> <!--PlutoPay page-->
         <!--Add Table of Contents on left side of page???-->
             <div><!--total container-->
-                <div> <!--hero section-->
+                <div id="pluto-hero"> <!--hero section-->
                     <h1>PlutoPay Case Study</h1>
                     <picture>
                         <source srcset="img/plutopay/all_imgs/plutopaymockup_one.jpg" media="(max-width:767px)">
@@ -54,7 +54,7 @@
                     <p>Figma, user personas, user journey, information architecture, usability testing, and prototyping</p>
                 </div>
 
-                <div> <!--Project Journey-->
+                <div id="pluto-journey"> <!--Project Journey-->
                     <div> <!--Introduction Section-->
                         <h2>Introduction</h2>
                         <h3>Problem:</h3>
@@ -75,7 +75,7 @@
                         <p>1.16 years</p>
                     </div>
 
-                    <div><!--Process Section-->
+                    <div id="pluto-process"><!--Process Section-->
                         <h2>My Process</h2>
                         <ol>
                             <li>The Initial Goal
@@ -106,7 +106,7 @@
                         </ol>
                     </div>
 
-                    <div><!--Overview Section-->
+                    <div id="pluto-overview"><!--Overview Section-->
                         <h2>Overview</h2>
                         <p>The pandemic, combined with growing technology usage, has greatly increased the popularity of ecommerce. The challenge to make 
                             purchases securely and efficiently was brought forward. Pluto Pay's goal in mind is to allow anyone to have control of their 
@@ -138,7 +138,7 @@
                             <img src="img/plutopay/all_imgs/serenauserpersona_two.jpg" alt="User persona Serena">
                         </picture>
 
-                        <div> <!--Design process section-->
+                        <div id="pluto-design"> <!--Design process section-->
                             <h3>Design Iterative Process</h3>
                         
                             <div> <!--Insert example of low fidelity design to be put next to high fid design img--> 
@@ -181,7 +181,7 @@
 
                         </div> <!--End of Design Process section-->
 
-                        <div> <!--Challenges and Takeaway section-->
+                        <div id="pluto-conclusion"> <!--Challenges and Takeaway section-->
                             <h3>Challenges</h3>
                             <p>This was a fun project to tackle. As a person who uses multiple financial apps myself, I found it hard to not put my own personal 
                                 opinions on how the design should look. I was quickly humbled when I interviewed others and was also reminded of why user-centric 
